# ot2_workcell

./: .gitignore  LICENSE.md  Notes.md  README.md  split_notes.md
Diagrams/: protocol_handling_diagram.sketchpad  stateot2_diagram.drawio
OT2_Modules/: arm_transfer.json  fpbreak.py  item1.py  item2.py  json_example.json  json_test.json  module_test.py  setup  setup2  test.py  worflow-doga2.json  workflow-arm.json  workflow-doga.json  workflow-doga2.json  workflow-duplicate-names.json  workflow-fpbreak.json  workflow.json  workflow_break_arm_transfers_example.json
Protocol_Modules/: Protocol_2022-04-15_16:49:52.py  Protocol_2022-04-15_16:49:54.py  Protocol_2022-04-15_16:52:46.py  Protocol_2022-04-15_16:52:49.py  error_handling.py
arm_client/: package.xml  setup.cfg  setup.py
arm_client/arm_client/: publish_arm_state.py  transfer_api.py
arm_controller/: package.xml  requirements.txt  setup.py
arm_controller/arm_controller/: armManager.py  armTransferHandler.py
arm_controller/launch/: arm_bringup.launch.py
database/: package.xml  setup.cfg  setup.py
database/database/: connect.py  create_SDL.sql  database_functions.py  protocol_parser.py
database/doga_tests/: camera_client_test.py  open_shell_ssh.py
database/ot2_driver_pkg/: ot2_driver.py
database/protocol_handler/: protocol_handling_client.py  protocol_parser.py  protocol_transfer.py
database/vision_pipette/: camera_server.py
database/zeroMQ_OT2/: OT2_listener.py  execute_command.py  external_server.py  ot2_client.py  stream_camera.py
json_schema/: generate_valid_schema.py  metadata.json  schema.json  validate_against_schema.py  workflow.json
json_schema/hardware/: OT2.json  arm.json
json_schema/steps/: ot2_command.json  ot2_protocol.json  plate_transfer.json  step_batch.json
ot2_client/: package.xml  setup.py
ot2_client/ot2_client/: load_run_api.py  load_run_api.py.old_save  ot2_control_api.py  publish_ot2_state_api.py
ot2_controller/: package.xml  setup.cfg  setup.py
ot2_controller/launch/: ot2_alex_bringup.launch.py  ot2_bob_bringup.launch.py
ot2_controller/ot2_controller/: ot2_controller.py  protocol_manager.py
ot2_driver_pkg/: README.md  package.xml  setup.cfg  setup.py
ot2_driver_pkg/database/: create_SDL.sql  database_functions.py
ot2_driver_pkg/protocol_handler/: protocol_parser.py
ot2_driver_pkg/zeroMQ_OT2/: OT2_listener.py  stream_camera.py
ot2_workcell_manager/: package.xml  setup.cfg  setup.py
ot2_workcell_manager/ot2_workcell_manager/: master.py  state_reset_handler.py
ot2_workcell_manager_client/: package.xml  setup.cfg  setup.py
ot2_workcell_manager_client/ot2_workcell_manager_client/: register_api.py  retry_api.py  worker_info_api.py
protocol_handling/: client.py  database_connect.py  error_handling.py  execute_command.py  listener.py  protocol.py  protocol_handling_client.py  protocol_parser.py  protocol_transfer.py
protocol_handling/ZeroMQ_External/: stream_processor.py
protocol_handling/database/: connect.py  create_SDL.sql  database_functions.py
protocol_handling/protocols/: Protocol_2022-02-18_17:13:44.py  error_handling.py
protocol_handling/test/: camera_client_test.py  camera_server_test.py
protocol_handling/vision_pipette/: camera_server.py  external_listener.py  stream_camera.py
protocol_handling/zeroMQ_OT2/: OT2_listener.py
protocol_handling_files_doga/: protocol_transfer.py
protocol_handling_files_doga/test/: open_shell_ssh.py
protocol_handling_files_doga/zeroMQ_OT2/: OT2_listener.py  execute_command.py  external_server.py  ot2_client.py  stream_camera.py
rostalker2/: setup.cfg  setup.py
scheduler/: package.xml  setup.py
scheduler/scheduler/: schedulerManager.py
scheduler_client/: package.xml  setup.cfg  setup.py
scheduler_client/scheduler_client/: add_blocks_scheduler.py  block_to_robot_conversion.py  json_scheduler_reader.py  publish_scheduler_state.py  test_bench.py  transfer_deadlock_detection.py
scheduler_controller/: package.xml  setup.cfg  setup.py
scheduler_controller/Notes/: Scheduler_implementation_draft_1.md  deadlock_notes.md
scheduler_controller/scheduler/: schedulerManager.py
scheduler_controller/scheduler_controller/: my_node.py  schedulerManager.py  schedulerWorkAdder.py
src/OT2_Modules/: module_test.py
src/arm_client/: package.xml  setup.py
src/arm_controller/: package.xml  setup.cfg  setup.py
src/armtalker/: package.xml  setup.cfg  setup.py
src/armtalker_api/: package.xml  setup.cfg  setup.py
src/master_api/: package.xml  setup.cfg  setup.py
src/mastertalker/: package.xml  setup.cfg  setup.py
src/mastertalker_api/: package.xml  setup.cfg  setup.py
src/ot2_client/: package.xml  setup.cfg  setup.py
src/ot2_controller/: package.xml  setup.py
src/ot2_workcell_manager/: package.xml  setup.py
src/ot2_workcell_manager_client/: package.xml  setup.py
src/ot2talker/: package.xml  setup.cfg  setup.py
src/ot2talker_api/: package.xml  setup.cfg  setup.py
src/py_pubsub/: package.xml  setup.py
src/py_srvcli/: package.xml  setup.py
src/rostalker2/: package.xml  setup.py
test_ros_packages/: package.xml  setup.cfg  setup.py
workcell_interfaces/: CMakeLists.txt  package.xml
(+95 files in other folders)
