<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_client</name>
  <version>0.0.0</version>
  <description>This package contains the API and interfaces available to those attempting to the use the arm. It contains the ability for internal arms nodes to communicate to themselves and an interface for beginning arm transfers between OT2s</description>
  <maintainer email="alan.wang@anl.gov">Alan Wang</maintainer>
  <license>MIT License</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>workcell_interfaces</exec_depend>
  <exec_depend>ot2_workcell_manager_client</exec_depend>
  <exec_depend>scheduler_client</exec_depend>
  <exec_depend>database</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
