<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scheduler_controller</name>
  <version>0.0.0</version>
  <description>This package contains the scheduler nodes which are responsible for distrubuting the respective protocols to each OT2.</description>
  <maintainer email="alan.wang@anl.gov">Alan Wang</maintainer>
  <license>MIT license</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>workcell_interfaces</exec_depend>
  <exec_depend>ot2_workcell_manager_client</exec_depend>
  <exec_depend>arm_client</exec_depend>
  <exec_depend>ot2_client</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
